--- a/environment.yml
+++ b/environment.yml
@@ -1,28 +1,492 @@
-usage: conda-env-script.py [-h] {create,export,list,remove,update,config} ...
-
-positional arguments:
-  {create,export,list,remove,update,config}
-    create              Create an environment based on an environment file
-    export              Export a given environment
-    list                List the Conda environments
-    remove              Remove an environment
-    update              Update the current environment based on environment
-                        file
-    config              Configure a conda environment
-
-optional arguments:
-  -h, --help            Show this help message and exit.
-
-conda commands available from other packages:
-  build
-  convert
-  debug
-  develop
-  env
-  index
-  inspect
-  metapackage
-  render
-  server
-  skeleton
-  verify
+name: base
+channels:
+  - pytorch
+  - anaconda
+  - conda-forge
+  - defaults
+dependencies:
+  - _anaconda_depends=2019.03=py37_0
+  - _ipyw_jlab_nb_ext_conf=0.1.0=py37_0
+  - affine=2.3.0=py_0
+  - alabaster=0.7.12=py37_0
+  - anaconda=custom=py37_1
+  - anaconda-client=1.7.2=py37_0
+  - anaconda-navigator=1.9.7=py37_0
+  - anaconda-project=0.8.4=py_0
+  - asn1crypto=1.2.0=py37_0
+  - astroid=2.3.3=py37_0
+  - astropy=3.2.3=py37he774522_0
+  - atomicwrites=1.3.0=py37_1
+  - attrs=19.3.0=py_0
+  - babel=2.7.0=py_0
+  - backcall=0.1.0=py37_0
+  - backports=1.0=py_2
+  - backports.os=0.1.1=py37_0
+  - backports.shutil_get_terminal_size=1.0.0=py37_2
+  - beautifulsoup4=4.8.1=py37_0
+  - bitarray=1.1.0=py37he774522_0
+  - bkcharts=0.2=py37_0
+  - blas=1.0=mkl
+  - bleach=3.1.0=py37_0
+  - blosc=1.16.3=h7bd577a_0
+  - bokeh=1.4.0=py37_0
+  - boost-cpp=1.72.0=h0caebb8_0
+  - boto=2.49.0=py37_0
+  - bottleneck=1.3.1=py37h8c2d366_0
+  - bzip2=1.0.8=he774522_0
+  - ca-certificates=2020.11.8=h5b45459_0
+  - cartopy=0.17.0=py37h814cdbc_1004
+  - catalogue=1.0.0=py37_1
+  - certifi=2020.11.8=py37h03978a9_0
+  - cffi=1.13.2=py37h7a1dbc1_0
+  - chardet=3.0.4=py37_1003
+  - click=7.0=py37_0
+  - click-plugins=1.1.1=py_0
+  - cligj=0.5.0=py_0
+  - cloudpickle=1.2.2=py_0
+  - clyent=1.2.2=py37_1
+  - colorama=0.4.1=py37_0
+  - comtypes=1.1.7=py37_0
+  - conda=4.9.2=py37h03978a9_0
+  - conda-build=3.17.8=py37_0
+  - conda-env=2.6.0=1
+  - conda-package-handling=1.6.0=py37h62dcd97_0
+  - conda-verify=3.1.1=py37_0
+  - console_shortcut=0.1.1=3
+  - contextily=1.0.0=py_0
+  - contextlib2=0.6.0.post1=py_0
+  - convertdate=2.3.0=pyhd8ed1ab_0
+  - cryptography=2.8=py37h7a1dbc1_0
+  - cudatoolkit=10.2.89=h74a9793_1
+  - curl=7.67.0=h2a8f88b_0
+  - cycler=0.10.0=py37_0
+  - cymem=2.0.3=py37ha925a31_0
+  - cython=0.29.14=py37ha925a31_0
+  - cython-blis=0.4.1=py37he774522_1
+  - cytoolz=0.10.1=py37he774522_0
+  - dask=2.8.0=py_1
+  - dask-core=2.8.0=py_0
+  - decorator=4.4.1=py_0
+  - defusedxml=0.6.0=py_0
+  - descartes=1.1.0=py_4
+  - distributed=2.8.0=py_1
+  - docutils=0.15.2=py37_0
+  - entrypoints=0.3=py37_0
+  - ephem=3.7.7.1=py37h4ab8f01_1
+  - et_xmlfile=1.0.1=py37_0
+  - expat=2.2.9=he025d50_2
+  - fastcache=1.1.0=py37he774522_0
+  - fbprophet=0.6=py37h6538335_0
+  - filelock=3.0.12=py_0
+  - fiona=1.8.4=py37h0d92105_1001
+  - flask=1.1.1=py_0
+  - freetype=2.9.1=ha9979f8_1
+  - freexl=1.0.5=hd288d7e_1002
+  - fsspec=0.6.0=py_0
+  - future=0.18.2=py37_0
+  - gdal=2.3.3=py37hdf43c64_0
+  - geographiclib=1.50=py_0
+  - geopandas=0.6.3=py_0
+  - geoplot=0.4.1=py_0
+  - geopy=1.22.0=pyh9f0ad1d_0
+  - geos=3.7.1=h33f27b4_0
+  - get_terminal_size=1.0.0=h38e98db_0
+  - gevent=1.4.0=py37he774522_0
+  - glob2=0.7=py_0
+  - graphviz=2.38=hfd603c8_2
+  - greenlet=0.4.15=py37hfa6e2cd_0
+  - h5py=2.9.0=py37h5e291fa_0
+  - hdf4=4.2.13=h712560f_2
+  - hdf5=1.10.4=h7ebc959_0
+  - heapdict=1.0.1=py_0
+  - holidays=0.10.3=pyh9f0ad1d_0
+  - html5lib=1.0.1=py37_0
+  - icc_rt=2019.0.0=h0cc432a_1
+  - icu=58.2=ha66f8fd_1
+  - idna=2.8=py37_0
+  - imageio=2.6.1=py37_0
+  - imagesize=1.1.0=py37_0
+  - importlib_metadata=0.23=py37_0
+  - intel-openmp=2019.4=245
+  - ipykernel=5.1.3=py37h39e3cac_0
+  - ipython=7.9.0=py37h39e3cac_0
+  - ipython_genutils=0.2.0=py37_0
+  - ipywidgets=7.5.1=py_0
+  - isort=4.3.21=py37_0
+  - itsdangerous=1.1.0=py37_0
+  - jdcal=1.4.1=py_0
+  - jedi=0.15.1=py37_0
+  - jinja2=2.10.3=py_0
+  - joblib=0.14.0=py_0
+  - jpeg=9b=hb83a4c4_2
+  - json5=0.8.5=py_0
+  - jsonschema=3.0.2=py37_0
+  - jupyter=1.0.0=py37_7
+  - jupyter_client=5.3.4=py37_0
+  - jupyter_console=6.0.0=py37_0
+  - jupyter_core=4.6.1=py37_0
+  - jupyterlab=1.2.3=pyhf63ae98_0
+  - jupyterlab_server=1.0.6=py_0
+  - kealib=1.4.7=h07cbb95_6
+  - keyring=19.2.0=py37_0
+  - kiwisolver=1.1.0=py37ha925a31_0
+  - korean_lunar_calendar=0.2.1=pyh9f0ad1d_0
+  - krb5=1.16.1=hc04afaa_7
+  - lazy-object-proxy=1.4.3=py37he774522_0
+  - libarchive=3.3.3=h0643e63_5
+  - libcurl=7.67.0=h2a8f88b_0
+  - libgdal=2.3.3=h10f50ba_0
+  - libiconv=1.15=h1df5818_7
+  - libkml=1.3.0=h7e985d0_1011
+  - liblief=0.9.0=ha925a31_2
+  - libnetcdf=4.6.1=h411e497_2
+  - libpng=1.6.37=h2a8f88b_0
+  - libpq=11.2=h3235a2c_0
+  - libsodium=1.0.16=h9d3ae62_0
+  - libspatialindex=1.9.3=he025d50_3
+  - libspatialite=4.3.0a=h6a0152f_1026
+  - libssh2=1.8.2=h7a1dbc1_0
+  - libtiff=4.1.0=h56a325e_0
+  - libxml2=2.9.9=h464c3ec_0
+  - libxslt=1.1.33=h579f668_0
+  - llvmlite=0.28.0=py37ha925a31_0
+  - locket=0.2.0=py37_1
+  - lunarcalendar=0.0.9=py_0
+  - lxml=4.4.1=py37h1350720_0
+  - lz4-c=1.8.1.2=h2fa13f4_0
+  - lzo=2.10=h6df0209_2
+  - m2-base=1.0.0=3
+  - m2-bash=4.3.042=5
+  - m2-bash-completion=2.3=2
+  - m2-catgets=1.1=3
+  - m2-coreutils=8.25=102
+  - m2-dash=0.5.8=2
+  - m2-diffutils=3.3=4
+  - m2-file=5.25=2
+  - m2-filesystem=2016.04=4
+  - m2-findutils=4.6.0=2
+  - m2-gawk=4.1.3=2
+  - m2-gcc-libs=5.3.0=4
+  - m2-gettext=0.19.7=4
+  - m2-gmp=6.1.0=3
+  - m2-grep=2.22=4
+  - m2-gzip=1.7=2
+  - m2-inetutils=1.9.2=2
+  - m2-info=6.0=2
+  - m2-less=481=2
+  - m2-libasprintf=0.19.7=4
+  - m2-libbz2=1.0.6=3
+  - m2-libcatgets=1.1=3
+  - m2-libcrypt=1.3=2
+  - m2-libgettextpo=0.19.7=4
+  - m2-libiconv=1.14=3
+  - m2-libintl=0.19.7=4
+  - m2-liblzma=5.2.2=2
+  - m2-libpcre=8.38=2
+  - m2-libreadline=6.3.008=8
+  - m2-libutil-linux=2.26.2=2
+  - m2-libxml2=2.9.2=3
+  - m2-make=4.1=5
+  - m2-mintty=1!2.2.3=2
+  - m2-mpfr=3.1.4=2
+  - m2-msys2-launcher-git=0.3.28.860c495=2
+  - m2-msys2-runtime=2.5.0.17080.65c939c=3
+  - m2-ncurses=6.0.20160220=2
+  - m2-sed=4.2.2=3
+  - m2-tar=1.28=4
+  - m2-tftp-hpa=5.2=2
+  - m2-time=1.7=2
+  - m2-ttyrec=1.0.8=2
+  - m2-tzcode=2015.e=2
+  - m2-unzip=6.0=3
+  - m2-util-linux=2.26.2=2
+  - m2-which=2.21=3
+  - m2-zip=3.0=2
+  - m2-zlib=1.2.8=4
+  - m2w64-binutils=2.25.1=5
+  - m2w64-bzip2=1.0.6=6
+  - m2w64-crt-git=5.0.0.4636.2595836=2
+  - m2w64-gcc=5.3.0=6
+  - m2w64-gcc-ada=5.3.0=6
+  - m2w64-gcc-fortran=5.3.0=6
+  - m2w64-gcc-libgfortran=5.3.0=6
+  - m2w64-gcc-libs=5.3.0=7
+  - m2w64-gcc-libs-core=5.3.0=7
+  - m2w64-gcc-objc=5.3.0=6
+  - m2w64-gmp=6.1.0=2
+  - m2w64-headers-git=5.0.0.4636.c0ad18a=2
+  - m2w64-isl=0.16.1=2
+  - m2w64-libiconv=1.14=6
+  - m2w64-libmangle-git=5.0.0.4509.2e5a9a2=2
+  - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
+  - m2w64-make=4.1.2351.a80a8b8=2
+  - m2w64-mpc=1.0.3=3
+  - m2w64-mpfr=3.1.4=4
+  - m2w64-pkg-config=0.29.1=2
+  - m2w64-toolchain=5.3.0=7
+  - m2w64-toolchain_win-64=2.4.0=0
+  - m2w64-tools-git=5.0.0.4592.90b8472=2
+  - m2w64-windows-default-manifest=6.4=3
+  - m2w64-winpthreads-git=5.0.0.4634.697f757=2
+  - m2w64-zlib=1.2.8=10
+  - mapclassify=2.3.0=py_0
+  - markupsafe=1.1.1=py37he774522_0
+  - matplotlib=3.1.3=py37_0
+  - matplotlib-base=3.1.3=py37h64f37c6_0
+  - mccabe=0.6.1=py37_1
+  - menuinst=1.4.16=py37he774522_0
+  - mercantile=1.1.5=pyh9f0ad1d_0
+  - mistune=0.8.4=py37he774522_0
+  - mkl=2019.4=245
+  - mkl-service=2.3.0=py37hb782905_0
+  - mkl_fft=1.0.15=py37h14836fe_0
+  - mkl_random=1.1.0=py37h675688f_0
+  - mlxtend=0.17.3=pyh9f0ad1d_0
+  - mock=3.0.5=py37_0
+  - more-itertools=7.2.0=py37_0
+  - mpmath=1.1.0=py37_0
+  - msgpack-python=0.6.1=py37h74a9793_1
+  - msys2-conda-epoch=20160418=1
+  - multipledispatch=0.6.0=py37_0
+  - munch=2.5.0=py_0
+  - murmurhash=1.0.2=py37h33f27b4_0
+  - navigator-updater=0.2.1=py37_0
+  - nbconvert=5.6.1=py37_0
+  - nbformat=4.4.0=py37_0
+  - networkx=2.4=py_0
+  - ninja=1.9.0=py37h74a9793_0
+  - nltk=3.4.5=py37_0
+  - nose=1.3.7=py37_2
+  - notebook=6.0.2=py37_0
+  - numba=0.43.1=py37hf9181ef_0
+  - numexpr=2.7.0=py37hdce8814_0
+  - numpy=1.17.3=py37h4ceb530_0
+  - numpy-base=1.17.3=py37hc3f5095_0
+  - numpydoc=0.9.1=py_0
+  - olefile=0.46=py37_0
+  - openpyxl=3.0.1=py_0
+  - openssl=1.1.1h=he774522_0
+  - owslib=0.19.2=py_0
+  - packaging=19.2=py_0
+  - pandoc=2.2.3.2=0
+  - pandocfilters=1.4.2=py37_1
+  - parso=0.5.1=py_0
+  - partd=1.0.0=py_0
+  - path.py=12.0.2=py_0
+  - pathlib2=2.3.5=py37_0
+  - patsy=0.5.1=py37_0
+  - pcre=8.44=h6538335_0
+  - pep8=1.7.1=py37_0
+  - pickleshare=0.7.5=py37_0
+  - pillow=6.2.1=py37hdc69c19_0
+  - pip=19.3.1=py37_0
+  - pkginfo=1.5.0.1=py37_0
+  - plac=0.9.6=py37_1
+  - pluggy=0.13.0=py37_0
+  - ply=3.11=py37_0
+  - posix=1.0.0=2
+  - powershell_shortcut=0.0.1=2
+  - preshed=3.0.2=py37h33f27b4_1
+  - proj4=5.2.0=h6538335_1006
+  - prometheus_client=0.7.1=py_0
+  - prompt_toolkit=2.0.10=py_0
+  - psutil=5.6.5=py37he774522_0
+  - py=1.8.0=py37_0
+  - py-lief=0.9.0=py37ha925a31_2
+  - pycodestyle=2.5.0=py37_0
+  - pycosat=0.6.3=py37hfa6e2cd_0
+  - pycparser=2.19=py37_0
+  - pycrypto=2.6.1=py37hfa6e2cd_9
+  - pycurl=7.43.0.3=py37h7a1dbc1_0
+  - pydot=1.4.1=py37_0
+  - pyepsg=0.4.0=py_0
+  - pyflakes=2.1.1=py37_0
+  - pygments=2.4.2=py_0
+  - pykdtree=1.3.1=py37hbc2f12b_1003
+  - pylint=2.4.4=py37_0
+  - pymeeus=0.3.7=pyh9f0ad1d_0
+  - pyodbc=4.0.27=py37ha925a31_0
+  - pyopenssl=19.1.0=py37_0
+  - pyparsing=2.4.5=py_0
+  - pyproj=1.9.6=py37hfa6e2cd_1002
+  - pyqt=5.9.2=py37h6538335_2
+  - pyreadline=2.1=py37_1
+  - pyrsistent=0.15.5=py37he774522_0
+  - pyshp=2.1.0=py_0
+  - pysocks=1.7.1=py37_0
+  - pystan=2.17.1.0=py37hb8a7f35_1004
+  - pytables=3.6.1=py37h1da0976_0
+  - pytest=5.2.4=py37_1
+  - pytest-arraydiff=0.3=py37h39e3cac_0
+  - pytest-astropy=0.6.0=py_0
+  - pytest-astropy-header=0.1.1=py_0
+  - pytest-doctestplus=0.5.0=py_0
+  - pytest-openfiles=0.4.0=py_0
+  - pytest-remotedata=0.3.2=py37_0
+  - python=3.7.3=h8c8aaf0_0
+  - python-dateutil=2.8.1=py_0
+  - python-graphviz=0.14.2=py_0
+  - python-libarchive-c=2.8=py37_13
+  - python_abi=3.7=1_cp37m
+  - pytorch=1.5.1=py3.7_cuda102_cudnn7_0
+  - pytz=2019.3=py_0
+  - pywavelets=1.1.1=py37he774522_0
+  - pywin32=227=py37he774522_1
+  - pywin32-ctypes=0.2.0=py37_0
+  - pywinpty=0.5.5=py37_1000
+  - pyyaml=5.1.2=py37he774522_0
+  - pyzmq=18.1.0=py37ha925a31_0
+  - qt=5.9.7=vc14h73c81de_0
+  - qtawesome=0.6.0=py_0
+  - qtconsole=4.6.0=py_0
+  - qtpy=1.9.0=py_0
+  - rasterio=1.0.21=py37h6bd7d87_0
+  - requests=2.22.0=py37_0
+  - rope=0.14.0=py_0
+  - rtree=0.9.4=py37h804a536_1
+  - ruamel_yaml=0.15.46=py37hfa6e2cd_0
+  - scikit-image=0.15.0=py37ha925a31_0
+  - scikit-learn=0.22.1=py37h6288b17_0
+  - scikit-surprise=1.1.1=py37h44b1f71_0
+  - scipy=1.4.1=py37h9439919_0
+  - seaborn=0.9.0=pyh91ea838_1
+  - send2trash=1.5.0=py37_0
+  - setuptools=41.6.0=py37_0
+  - shapely=1.6.4=py37h7d20962_1005
+  - simplegeneric=0.8.1=py37_2
+  - singledispatch=3.4.0.3=py37_0
+  - sip=4.19.8=py37h6538335_0
+  - snappy=1.1.7=h777316e_3
+  - snowballstemmer=2.0.0=py_0
+  - snuggs=1.4.7=py_0
+  - sortedcollections=1.1.2=py37_0
+  - sortedcontainers=2.1.0=py37_0
+  - soupsieve=1.9.5=py37_0
+  - spacy=2.3.1=py37h74a9793_0
+  - sphinx=2.2.1=py_0
+  - sphinxcontrib=1.0=py37_1
+  - sphinxcontrib-applehelp=1.0.1=py_0
+  - sphinxcontrib-devhelp=1.0.1=py_0
+  - sphinxcontrib-htmlhelp=1.0.2=py_0
+  - sphinxcontrib-jsmath=1.0.1=py_0
+  - sphinxcontrib-qthelp=1.0.2=py_0
+  - sphinxcontrib-serializinghtml=1.1.3=py_0
+  - sphinxcontrib-websupport=1.1.2=py_0
+  - spyder=3.3.6=py37_0
+  - spyder-kernels=0.5.2=py37_0
+  - sqlalchemy=1.3.11=py37he774522_0
+  - sqlite=3.30.1=he774522_0
+  - srsly=1.0.2=py37ha925a31_0
+  - sympy=1.4=py37_0
+  - tbb=2019.4=h74a9793_0
+  - tblib=1.5.0=py_0
+  - terminado=0.8.3=py37_0
+  - testpath=0.4.4=py_0
+  - thinc=7.4.1=py37h74a9793_0
+  - tk=8.6.8=hfa6e2cd_0
+  - toolz=0.10.0=py_0
+  - torchvision=0.6.1=py37_cu102
+  - tornado=6.0.3=py37he774522_0
+  - tqdm=4.38.0=py_0
+  - traitlets=4.3.3=py37_0
+  - unicodecsv=0.14.1=py37_0
+  - urllib3=1.24.2=py37_0
+  - vc=14.1=h0510ff6_4
+  - vs2015_runtime=14.16.27012=hf0eaf9b_0
+  - wasabi=0.7.1=py_0
+  - wcwidth=0.1.7=py37_0
+  - webencodings=0.5.1=py37_1
+  - werkzeug=0.16.0=py_0
+  - wheel=0.33.6=py37_0
+  - widgetsnbextension=3.5.1=py37_0
+  - win_inet_pton=1.1.0=py37_0
+  - win_unicode_console=0.5=py37_0
+  - wincertstore=0.2=py37_0
+  - winpty=0.4.3=4
+  - wrapt=1.11.2=py37he774522_0
+  - xerces-c=3.2.3=ha925a31_1
+  - xlrd=1.2.0=py37_0
+  - xlsxwriter=1.2.6=py_0
+  - xlwings=0.16.0=py37_0
+  - xlwt=1.3.0=py37_0
+  - xz=5.2.4=h2fa13f4_4
+  - yaml=0.1.7=hc54c509_2
+  - zeromq=4.3.1=h33f27b4_3
+  - zict=1.0.0=py_0
+  - zipp=0.6.0=py_0
+  - zlib=1.2.11=h62dcd97_3
+  - zstd=1.3.7=h508b16e_0
+  - pip:
+    - appdirs==1.4.3
+    - cfgv==3.2.0
+    - cliff==3.1.0
+    - cmd2==0.8.9
+    - crowdai-api==0.1.22
+    - debtcollector==2.0.0
+    - dill==0.3.3
+    - distlib==0.3.1
+    - dogpile-cache==0.9.0
+    - en-core-web-sm==2.3.1
+    - fasttext==0.9.1
+    - flatland-rl==2.2.1
+    - gym==0.14.0
+    - hdf5storage==0.1.15
+    - identify==1.5.3
+    - importlib-resources==1.5.0
+    - ipynb==0.5.1
+    - iso8601==0.1.12
+    - jmespath==0.9.5
+    - jsonpatch==1.25
+    - jsonpointer==2.0
+    - keystoneauth1==4.0.0
+    - mat4py==0.4.3
+    - mat73==0.45
+    - msgpack-numpy==0.4.6.post0
+    - netaddr==0.7.19
+    - netifaces==0.10.9
+    - nodeenv==1.5.0
+    - oauthlib==3.1.0
+    - openstacksdk==0.46.0
+    - os-service-types==1.7.0
+    - osc-lib==2.0.0
+    - oslo-config==8.0.1
+    - oslo-i18n==4.0.0
+    - oslo-serialization==3.1.0
+    - oslo-utils==4.1.0
+    - padasip==1.1.1
+    - pandas==0.25.1
+    - pbr==5.4.4
+    - pre-commit==2.7.1
+    - prettytable==0.7.2
+    - pyarrow==1.0.0
+    - pybind11==2.4.3
+    - pydub==0.23.1
+    - pyglet==1.3.2
+    - pyperclip==1.8.0
+    - pytest-runner==5.2
+    - python-cinderclient==6.0.0
+    - python-gitlab==2.4.0
+    - python-keystoneclient==3.22.0
+    - python-novaclient==16.0.0
+    - python-openstackclient==5.2.0
+    - recordtype==1.3
+    - redis==3.5.3
+    - requests-oauthlib==1.3.0
+    - requestsexceptions==1.4.0
+    - rfc3986==1.3.2
+    - simplejson==3.17.0
+    - six==1.15.0
+    - statsmodels==0.12.1
+    - stevedore==1.32.0
+    - suds-jurko==0.6
+    - suds-py3==1.4.1.0
+    - suds-requests==0.4.0
+    - svgutils==0.3.1
+    - tick==0.7.0.1
+    - timeout-decorator==0.4.1
+    - toml==0.10.1
+    - tox==3.18.0
+    - translate==3.5.0
+    - typed-ast==1.4.1
+    - virtualenv==20.0.28
+prefix: C:\Users\Isabelle\Anaconda3
